[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/ScoreCard/ScoreCard.gd" type="Script" id=1]
[ext_resource path="res://ui/Themes/MainTheme/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/Themes/MainTheme/Textures/status_container.png" type="Texture" id=3]
[ext_resource path="res://ui/Themes/MainTheme/secondary_theme.tres" type="Theme" id=4]
[ext_resource path="res://fonts/Ranchers-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 5 )

[node name="ScoreCard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreBox" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -123.0
margin_right = 123.0
margin_bottom = 80.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScoreBox"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -123.0
margin_right = 115.0
margin_bottom = 77.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="ScoreBox/HBoxContainer"]
margin_top = 24.0
margin_right = 70.0
margin_bottom = 52.0
rect_min_size = Vector2( 70, 0 )
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoostRect" type="TextureRect" parent="ScoreBox/HBoxContainer"]
margin_left = 94.0
margin_right = 144.0
margin_bottom = 77.0
rect_min_size = Vector2( 50, 50 )

[node name="DistanceLabel" type="Label" parent="ScoreBox/HBoxContainer"]
margin_left = 168.0
margin_top = 24.0
margin_right = 238.0
margin_bottom = 52.0
rect_min_size = Vector2( 70, 0 )
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
